--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,9 @@ set(INSTALLDIR ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
 
 target_sources(
   ${PROJECT_NAME}
-  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/task.h>
+  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/source_location.h>
+         $<INSTALL_INTERFACE:${INSTALLDIR}/source_location.h>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/task.h>
          $<INSTALL_INTERFACE:${INSTALLDIR}/task.h>
          $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/scheduler.h>
          $<INSTALL_INTERFACE:${INSTALLDIR}/scheduler.h>
