--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -5,12 +5,25 @@ name: CMake on multiple platforms
 on:
   push:
     branches: [ "master" ]
+    tags-ignore:
+      - 'v*'
   pull_request:
     branches: [ "master" ]
+  workflow_call:
+    secrets:
+      envPAT:
+        required: true
+    outputs:
+      project-version:
+        description: "Project version described in CMakeLists.txt"
+        value: ${{ jobs.build.outputs.project-version }}
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    outputs:
+      project-version: ${{ steps.get-project-version.outputs.project-version }}
+
 
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
@@ -64,6 +77,13 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -S ${{ github.workspace }}
 
+    - name: Retrieve project version from CMakeLists.txt
+      id: get-project-version
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      shell: bash
+      run: |
+        echo "project-version=$(cmake --system-information | awk -F= '$1~/CMAKE_PROJECT_VERSION:STATIC/{print$2}')" >> "$GITHUB_OUTPUT"
+
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
@@ -73,3 +93,18 @@ jobs:
       # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
+
+    - name: Pack
+      if: ${{ matrix.build_type == 'Release' }}
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      run: cpack
+
+    - name: Upload artifacts
+      if: ${{ matrix.build_type == 'Release' }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: ${{ matrix.os }}.${{ matrix.c_compiler }}.${{ matrix.build_type }}
+        path: |
+          ${{ steps.strings.outputs.build-output-dir }}/libcoschedula*.deb
+          ${{ steps.strings.outputs.build-output-dir }}/libcoschedula*.zip
+          ${{ steps.strings.outputs.build-output-dir }}/libcoschedula*.sh
