Documentation in code added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,16 +81,12 @@ install(FILES "${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
               "${PROJECT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/cmake)
 
-# set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
+set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
 
 if(UNIX)
-  message("LINUX: USING DEB;STGZ GENERATOR ")
   set(CPACK_GENERATOR "DEB;STGZ")
 elseif(WIN32)
-  message("WIN32: USING ZIP GENERATOR ")
   set(CPACK_GENERATOR ZIP)
-else()
-  message("Nothing Found for GENERATOR 232323232322323")
 endif()
 
 set(CPACK_PACKAGE_NAME "lib${PROJECT_NAME}")
