--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -18,6 +18,12 @@ on:
         description: "Project version described in CMakeLists.txt"
         value: ${{ jobs.build-test-pack.outputs.project-version }}
 
+permissions:
+  # deployments permission to deploy GitHub pages website
+  deployments: write
+  # contents permission to update benchmark contents in gh-pages branch
+  contents: write
+
 jobs:
   build-test-pack:
     runs-on: ${{ matrix.os }}
@@ -112,6 +118,8 @@ jobs:
       with:
         tool: 'googlecpp'
         output-file-path: ${{ steps.strings.outputs.build-output-dir }}/benchmark_result.json
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        auto-push: true
 
     - name: Pack
       if: ${{ matrix.build_type == 'Release' }}
