fs::read empty return fixed

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,13 +15,9 @@ endif()
 
 enable_testing()
 
-add_executable(${PROJECT_NAME} task_suite.cpp)
-if(MSVC)
-  #set_property(
-  #  TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY
-  #                                  "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-endif()
+add_executable(${PROJECT_NAME} task_suite.cpp fs_suite.cpp)
 
 include(3rdparty_googletest.cmake)
+
 target_link_libraries(${PROJECT_NAME} coschedula)
 target_link_google_test(${PROJECT_NAME})
