--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,10 +14,22 @@ target_sources(
          $<INSTALL_INTERFACE:${INSTALLDIR}/task.h>
          $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/scheduler.h>
          $<INSTALL_INTERFACE:${INSTALLDIR}/scheduler.h>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/global_scheduler.h>
+         $<INSTALL_INTERFACE:${INSTALLDIR}/global_scheduler.h>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/per_thread_scheduler.h>
+         $<INSTALL_INTERFACE:${INSTALLDIR}/per_thread_scheduler.h>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/default_scheduler.h>
+         $<INSTALL_INTERFACE:${INSTALLDIR}/default_scheduler.h>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/default_task_registry.h>
+         $<INSTALL_INTERFACE:${INSTALLDIR}/default_task_registry.h>
          $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/execution.h>
          $<INSTALL_INTERFACE:${INSTALLDIR}/execution.h>
          $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/async.h>
          $<INSTALL_INTERFACE:${INSTALLDIR}/async.h>
          $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/fs.h>
          $<INSTALL_INTERFACE:${INSTALLDIR}/fs.h>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/runners.h>
+         $<INSTALL_INTERFACE:${INSTALLDIR}/runners.h>
+         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/utils.h>
+         $<INSTALL_INTERFACE:${INSTALLDIR}/utils.h>
   PRIVATE fs.cpp)
