--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,7 +15,10 @@ endif()
 
 enable_testing()
 
-add_executable(${PROJECT_NAME} task_suite.cpp fs_suite.cpp)
+add_executable(${PROJECT_NAME} global_scheduler_suite.cpp fs_suite.cpp
+                               per_thread_scheduler_suite.cpp
+                               runners_suite.cpp
+                               async_suite.cpp)
 
 include(3rdparty_googletest.cmake)
 
