tests rewritten without use of private API
Task: #18

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,11 +15,11 @@ endif()
 
 enable_testing()
 
-add_executable(${PROJECT_NAME} global_scheduler_suite.cpp fs_suite.cpp
+add_executable(${PROJECT_NAME} single_thread_suite.cpp fs_suite.cpp
                                per_thread_scheduler_suite.cpp
                                runners_suite.cpp
                                async_suite.cpp
-                               utils.h)
+                           )
 
 include(3rdparty_googletest.cmake)
 
