per_thread_scheduler renamed to scheduler_selector which is now a part of private api
Task: #18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,8 @@ endif()
 
 if((CMAKE_CXX_COMPILER_ID STREQUAL "Clang") OR (CMAKE_CXX_COMPILER_ID STREQUAL
                                                 "GNU"))
-  target_compile_options(${PROJECT_NAME} PRIVATE -Werror -Wall -Wextra)
+  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic
+                                                 -Werror -Wno-error=deprecated)
 endif()
 
 add_subdirectory(src)
