--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -45,6 +45,7 @@ jobs:
         os: [ubuntu-22.04, windows-2022]
         build_type: [Release, Debug]
         c_compiler: [gcc, clang, cl]
+        sanitizer_bundle: [nosan, asan, tsan]
         include:
           - os: windows-2022
             c_compiler: cl
@@ -81,6 +82,7 @@ jobs:
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        -DSANITIZER_BUNDLE=${{ matrix.sanitizer_bundle }}
         -S ${{ github.workspace }}
 
     - name: Retrieve project version from CMakeLists.txt
